--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="title">Rick and More</h1>
     <main>
       <div class="search-bar-container" data-js="search-bar-container">
-        <form action="" class="search-bar" data-js="search-bar">
+        <!-- <form action="" class="search-bar" data-js="search-bar">
           <input
             name="query"
             class="search-bar__input"
@@ -28,7 +28,7 @@
               alt=""
             />
           </button>
-        </form>
+        </form> -->
       </div>
       <ul class="card-container" data-js="card-container">
         <li class="card">
@@ -55,11 +55,11 @@
       </ul>
     </main>
     <nav class="navigation" data-js="navigation">
-      <button class="button button--prev" data-js="button-prev">
+      <!-- <button class="button button--prev" data-js="button-prev">
         previous
       </button>
       <span class="navigation__pagination" data-js="pagination">1 / 1</span>
-      <button class="button button--next" data-js="button-next">next</button>
+      <button class="button button--next" data-js="button-next">next</button> -->
     </nav>
   </body>
   <script type="module" src="./index.js"></script>
